food widget added

--- a/todo_list/app/views/index.scala.html
+++ b/todo_list/app/views/index.scala.html
@@ -2,4 +2,10 @@
 
 @main("Welcome to Play") {
   <h1>Welcome to Play!</h1>
+    <form action="http://google.com">
+    <input type="submit" value="Go to Google" />
+</form>
+</form>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-d62046a8-2e8b-49c6-8e53-e8b66037e8a5"></div>
 }
